Primeiro endpoint de dashboards
