# doc/swagger.yaml
@@ -310,6 +310,21 @@ paths:
       - Dashboard
       summary: Consultar estatísticas de alertas
       operationId: GetDashboardAlerts
+      parameters: 
+        - name: "month_start"
+          in: "query"
+          description: "Ano/Mês início"
+          required: false
+          schema:
+            type: string
+            default: "2019-01"
+        - name: "month_end"
+          in: "query"
+          description: "Ano/Mês fim"
+          required: false
+          schema:
+            type: string
+            default: "2019-12"
       responses:
         200:
           description: successful operation
@@ -479,33 +494,83 @@ components:
           items:
             $ref: '#/components/schemas/AlertInfo'
     DashboardAlerts:
-      type: array
-      items:
-        type: object
-        properties:
-          month:
-            type: string
-            example: 2019-05
-          alerts:
-            type: array
-            items:
-              type: object
-              properties:
-                type:
-                  $ref: '#/components/schemas/AlertType'
-                customer_quantity:
-                  type: integer
-                  format: int64
-                users_quantity:
-                  type: integer
-                  format: int64
+      type: object
+      properties: 
+        totals: 
+          properties: 
+            customer_quantity: 
+              type: "number"
+            public_agent_quantity: 
+              type: "number"
+            employee_quantity: 
+              type: "number"
+          type: "object"
+        data: 
+          type: "array"
+          items: 
+            type: "object"
+            properties: 
+              month: 
+                type: "string"
+              alerts: 
+                required: 
+                  - "public_agent"
+                  - "bigger_salary"
+                  - "bank_employee"
+                  - "clients"
+                properties: 
+                  public_agent: 
+                    required: 
+                      - "customer_quantity"
+                      - "notify_quantity"
+                      - "bigger_salary_quantity"
+                      - "new_quantity"
+                    properties: 
+                      customer_quantity: 
+                        type: "number"
+                      notify_quantity: 
+                        type: "number"
+                      bigger_salary_quantity: 
+                        type: "number"
+                      new_quantity: 
+                        type: "number"
+                    type: "object"
+                  bigger_salary: 
+                    required: 
+                      - "customer_quantity"
+                      - "notify_quantity"
+                    properties: 
+                      customer_quantity: 
+                        type: "number"
+                      notify_quantity: 
+                        type: "number"
+                    type: "object"
+                  bank_employee: 
+                    required: 
+                      - "customer_quantity"
+                      - "notify_quantity"
+                      - "new_quantity"
+                    properties: 
+                      customer_quantity: 
+                        type: "number"
+                      notify_quantity: 
+                        type: "number"
+                      new_quantity: 
+                        type: "number"
+                    type: "object"
+                  clients: 
+                    required: 
+                      - "new_quantity"
+                    properties: 
+                      new_quantity: 
+                        type: "number"
+                    type: "object"
+                type: "object"
     DashboardCustomers:
       type: array
       items:
         type: object
         properties:
-          department:
-            type: string
           name: 
             type: string
           salary:
